--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,13 @@
     --color-primary: #4db5ff;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #fff;
-    -color-light: rgba(255, 255, 255, 0.6);
+    --color-light: rgba(255, 255, 255, 0.6);
 
     --transition: all 400ms ease;
 
     --container-width-lg: 75%;
     --container-width-md: 86%;
-    --container-width-ms: 90%;
+    --container-width-sm: 90%;
 }
 
 html {
@@ -62,6 +62,7 @@ h1 {
 
 section {
     margin-top: 8rem;
+    height: 100vh;
 }
 
 section > h2, 
@@ -111,3 +112,26 @@ img {
     object-fit: cover;
 }
 
+/* ================= MEDIA QUERIES (TABLETS) ================== */
+
+@media screen and (max-width: 1024px) {
+    .container {
+        width: var(--container-width-md);
+    }
+
+    selection {
+        margin-top: 6rem;
+    }
+}
+
+/* ================= MEDIA QUERIES (MOBILE) ================== */
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: var(--container-width-sm);
+    }
+
+    selection > h2 {
+        margin-bottom: 2rem;
+    }
+}
