--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,6 +1,6 @@
 .services__container {
     display: grid;
-    grid-template-columns: repeat(3) 1fr;
+    grid-template-columns: repeat(3, 1fr);
     gap: 3rem;
 }
 
@@ -50,3 +50,24 @@
     font-size: 0.9rem;
 }
 
+/* ================= MEDIA QUERIES TABLET  ================ */
+
+@media screen and (max-width: 1024px) {
+    .services__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+    }
+
+    .service {
+        height: auto;
+    }
+}
+
+/* ================= MEDIA QUERIES PHONE  ================ */
+
+@media  screen and (max-width: 600px) {
+    .services__container {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+    }
+}
